<resources>
    <string name="app_name">ShotSorter</string>
    <string name="message_toggle_startup">Run on start up</string>
    <string name="text_delay_remove">Delay remove</string>
    <string name="toast_cannot_change_observed">Cannot change observed directory while the service is running</string>
    <string name="hint_delay_remove">After X seconds</string>
    <string name="button_activate">ACTIVATE</string>
    <string name="button_change_destination">Change the destination</string>
    <string name="button_change_observed">Change observed directory</string>
    <string name="button_exit">Exit</string>
    <string name="button_exit_without_applying">Exit without apply</string>
</resources>
