<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.OperationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="64dp"
            app:srcCompat="@drawable/title_icon" />

        <ToggleButton
            android:id="@+id/toggleActivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_activate" />

        <Switch
            android:id="@+id/switchStartup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/message_toggle_startup" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>